# api-deployment-demo

./: .env.example  .envrc  .gitignore  Makefile  README.md  ansible.cfg  docker-compose.yml  kind-config.yaml  pyproject.toml
ansible/: GIT-SECURITY.md  MAKE_TO_ANSIBLE.md  README.md  VAULT-DECRYPTION-GUIDE.md  VAULT-SECURITY.md  ansible.cfg  cleanup.yml  db.yml  deploy-monitoring.yml  deploy-production.yml  deploy-staging.yml  deploy.yml  deployment-guide.sh  dynamic_inventory.py  git-security-audit.sh  install-collections.sh  inventory.ini  kubernetes.yml  manage-secrets.yml  requirements.yml  security-audit.sh  site.yml  test-role.yml  validate-ansible.sh  vault-demo.yml
api/: .env.example  Dockerfile  gunicorn.conf.py  main.py  requirements.txt
database/: init.sql  postgresql.conf
docs/: CHANGELOG.md  CI-CD-WORKFLOWS.md  DEPLOYMENT-METHODS.md  GRAFANA-DASHBOARDS.md  INDEX.md  MONITORING-SETUP.md  MONITORING.md  QUICK-REFERENCE.md  SECRETS-SECURITY.md  TERRAFORM-GUIDE.md
kubernetes/: api-deployment.yaml  configmap-production.yaml  configmaps.yaml  grafana-dashboard-configmap.yaml  grafana-datasource-configmap.yaml  grafana-deployment.yaml  grafana-providers-configmap.yaml  grafana-simple-dashboard.yaml  hpa.yaml  https-ingress.yaml  ingress.yaml  monitoring-ingress.yaml  monitoring-loadbalancer.yaml  monitoring-nodeport.yaml  monitoring-secrets.yaml  namespace.yaml  network-policy.yaml  nginx-deployment.yaml  nginx-html-configmap.yaml  nginx-ingress-controller.yaml  nodeport-services.yaml  persistent-volumes.yaml  postgres-deployment.yaml  secrets.yaml  (+5 more)
(+93 files in other folders)
